<resources>
    <string name="app_name">Havfsiz yo\'l</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="gps">GPS dan foydalanish</string>
    <string name="kamera">Kameradan foydalanish</string>
    <string name="galleriya">Galleriyaga saqlash</string>
    <string name="text1">Video registrator ishlashi uchun quyidagi ruxsatlar talab qilinadi:</string>
    <string name="hush_kelibsiz">Hush kelibsiz!</string>
    <string name="dasturga_kirish_turini_tanlang">Dasturga kirish turini tanlang</string>
    <string name="now">Telefon raqami orqali</string>
    <string name="google_email">Google email</string>
    <string name="sms_kodni_kiriting">SMS kodni kiriting</string>
    <string name="kodni_kiriting">Kodni kiriting</string>
    <string name="kodni_qayta_olish">Kodni qayta olish</string>
    <string name="_00_45">Video Galereyadan o/chib ketgan</string>
    <string name="kirish">Kirish</string>
    <string name="ortga_qaytish">Ortga qaytish</string>
    <string name="ism">Ism</string>
    <string name="familiya">Familiya</string>
    <string name="open_map">Xaritani ochish</string>
    <string name="sharifi">Sharifi</string>
    <string name="poselka_mavze_ko_cha_uy">Poselka/mavze/ko\'cha/uy</string>
    <string name="pochta_indexi">Pochta indeksi</string>
    <string name="keyingisi">Keyingisi</string>
    <string name="_998_90_123_45_67">(+998 90) 123-45-67</string>
    <string name="send">send</string>
    <string name="havfsiz_yo_l">Havfsiz yo\'l</string>
    <string name="tilni_tanlang">Tilni tanlang</string>
    <string name="o_zbek_tili">O’zbek tili</string>
    <string name="lang_ru">Русский</string>
    <string name="lang_en">English</string>
    <string name="sign_in">Sign in</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Parol</string>
    <string name="continue_btn">Davom etish</string>
    <string name="first_name">Ism</string>
    <string name="last_name">Familiya</string>
    <string name="location">Manzil</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_number">Telefon raqam</string>
    <string name="district">Tuman</string>
    <string name="tashkent">Shahar</string>
    <string name="street">Ko\'cha</string>
    <string name="save">Saqlash</string>
    <string name="code">Kod</string>
    <string name="send_code_again">Kodni qayta yuborish</string>
    <string name="_02_12">02:12</string>
    <string name="app_nameee">Havfsiz Yo\'l</string>
    <string name="yoqubov_otabek">Umid Abdusattorov</string>
    <string name="setting">Sozlamalar</string>
    <string name="start">Boshlash</string>
    <string name="profile">Profil</string>
    <string name="log_out">Tizimdan chiqish</string>
    <string name="number">+998 99 999 99 99</string>
    <string name="edit_profile">Profilni tahrirlash</string>
    <string name="lorem">Ushbu dastur yordamida qoida buzarliklarni videoga olishingiz mumkin</string>
    <string name="about">Dastur haqida</string>
    <string name="saved_videos">Videolar</string>
    <string name="videos">Videolar</string>
    <string name="gallery">Galereya</string>
    <string name="_0">0</string>
    <string name="_11_05_2022_17_30">11.05.2022. 17:30</string>
    <string name="fd">--:--</string>
    <string name="cancel">Bekor qilish</string>
    <string name="delete">O\'chirish</string>
    <string name="play">Videoni ko\'rish</string>
    <string name="share">Ulashish</string>
    <string name="_105_sec">105.sec</string>
    <string name="_2_00">2:00</string>
    <string name="video_o_lchamlari">Video o\'lchamlari</string>

    <string name="video_yozib_olish_vaqti">Video yozib olish vaqti</string>
    <string name="_1600x720">1600x720</string>
    <string name="_1080x1080">1080x1080</string>
    <string name="_1280x720_hd">1280x720(HD)</string>
    <string name="_1440x720">1440x720</string>
    <string name="_1440x1080">1440x1080</string>
    <string name="_1920x1080_fullhd">1920x1080(FullHD)</string>
    <string name="ds">02:00</string>
    <string name="fdsfd">Ўзбек тили(крилл)</string>
    <string name="asd">Русский</string>
    <string name="hello_blank_fragment">Salom!</string>
    <string name="_15_soniya">15 soniya</string>
    <string name="saqlash">Saqlash</string>

    <string name="ta">ta</string>
    <string name="soniya">soniya</string>
    <string name="video_sifati">Video sifati</string>
    <string name="video_davomiyligi">Video davomiyligi</string>
    <string name="avtomatik_saqlanadigan_video_soni">Avtomatik saqlanadigan video soni</string>
    <string name="_240p">240p</string>
    <string name="_360p">360p</string>
    <string name="_480p">480p</string>
    <string name="cut">Kesish</string>

    <string name="df">720p</string>
    <string name="_1080p_hd">1080p(hd)</string>
    <string name="kesilgan_videolar">Kesilgan videolar</string>
    <string name="_720p" translatable="false">720p</string>
    <string name="information">Information</string>
    <string name="video_hajmi">Video hajmi</string>
    <string name="video_infarmation">Video infarmation</string>
    <string name="video_olingan_vaqt">Video olingan vaqt</string>
    <string name="video_olingan_sana">Video olingan sana</string>
    <string name="video_olingan_joy">Video olingan joy</string>
    <string name="saqlangan_videolar">Saqlangan videolar</string>
    <string name="xaritadan_ko_rish">Xaritadan ko\'rish</string>
    <string name="video_ma_lumotlari">Video ma\'lumotlari</string>
</resources>