<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_20sdp"
        app:cardBackgroundColor="#E6FFFFFF"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20sdp">

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:checked="true"
                    android:text="@string/_1600x720"
                    android:textSize="@dimen/_16sdp" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/_1080x1080"
                    android:textSize="@dimen/_16sdp" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/_1280x720_hd"
                    android:textSize="@dimen/_16sdp" />

                <RadioButton
                    android:id="@+id/radio4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/_1440x720"
                    android:textSize="@dimen/_16sdp" />

                <RadioButton
                    android:id="@+id/radio5"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/_1440x1080"
                    android:textSize="@dimen/_16sdp" />

                <RadioButton
                    android:id="@+id/radio6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/_1920x1080_fullhd"
                    android:textSize="@dimen/_16sdp" />

            </RadioGroup>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>