<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".registration.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/style"
            android:hint="@string/ism"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/style"
            android:hint="@string/familiya"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp" />

        <EditText
            android:id="@+id/father_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/style"
            android:hint="@string/sharifi"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp" />

        <Spinner
            android:id="@+id/spinner_R"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/style" />

        <Spinner
            android:id="@+id/spinner_C"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/style" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/style"
            android:hint="@string/poselka_mavze_ko_cha_uy"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp" />

        <EditText
            android:id="@+id/zip_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/style"
            android:hint="@string/pochta_indexi"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp" />

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyingisi"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>