<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".registration.SelectRegisterTypeFragment">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hush_kelibsiz"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/dasturga_kirish_turini_tanlang"
        android:textColor="@color/black"
        android:textSize="@dimen/_17sdp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="#00E88B"
        app:cardCornerRadius="@dimen/_10sdp"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_local_phone_24" />

            <TextView
                android:id="@+id/phone_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/now"
                android:textSize="@dimen/_16sdp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="#24FF00"
        app:cardCornerRadius="@dimen/_10sdp"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/google" />

            <TextView
                android:id="@+id/google_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/google_email"
                android:textSize="@dimen/_16sdp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>